# NyaaAIk

./: .env.example  .gitattributes  .gitignore  README.md  app.yaml  project_writeup.md  pyproject.toml  requirements-app.txt  requirements.txt  setup_secrets.py
app/: __init__.py  main.py
app/static/: index.html
app/static/assets/: index-5I-fHGAa.js  index-BFQvJ6wW.css  index-BapgFt0y.js  index-C0kideEU.js  index-C9f0f2fZ.css  index-COMy_uui.css  index-CPzZSbvg.js  index-CX0TVogF.js  index-Cw2lh9Tw.js  index-D68ePgBp.js  index-DM2re6qK.css  index-DU6UaEAb.js  index-DfVZgbDP.js  index-DiBP1ECf.css  index-Dq_ESNCu.js  index-Dy3L1m-q.js  index-HVILg6E9.js
docs/: BENCHMARK_EVALUATION.md  DEVELOPER_GUIDE.md  PLAN.md  PLAYGROUND_TO_APP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  ControlsBar.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  SourcesAccordion.jsx  ThinkingIndicator.jsx  Topbar.jsx  TopicsChips.jsx  UploadModal.jsx  WelcomeScreen.jsx
frontend/src/hooks/: useChat.js  useDocuments.js  useSarvamVoice.js  useVoiceInput.js
frontend/src/utils/: api.js  icons.jsx
notebooks/: build_rag_index.ipynb  india_legal_policy_ingest.ipynb  run_benchmark.py  setup_vector_search.py
src/nyaya_dhwani/: __init__.py  case_search.py  index_builder.py  llm_client.py  manifest.py  retrieval.py  sarvam_client.py  vs_retriever.py
tests/: test_case_search_live.py  test_full_integration.py  test_index_faiss.py  test_llm_client.py
