[project]
name = "nyaya-dhwani"
version = "0.1.0"
description = "Legal RAG ingestion and multilingual assistant (Databricks + Sarvam)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
# Core vector index (tests + retrieval); sentence-transformers is separate (heavy).
rag = [
  # faiss-cpu 1.8+ uses numpy._core (NumPy 2+), which conflicts with databricks-connect (numpy<2).
  # faiss-cpu 1.7.x uses numpy.core and works with numpy 1.26 + Spark client libraries.
  "numpy>=1.24,<2",
  "faiss-cpu>=1.7.0,<1.8",
  "pyarrow>=14.0.0",
]
rag_embed = [
  "sentence-transformers>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "network: tests that call external HTTP (opt-in)",
]
